Rationalized color handling in terminal and emacs

--- a/dot-files/tmux.conf
+++ b/dot-files/tmux.conf
@@ -1,3 +1,6 @@
 # set -g mouse on
 # Bind left-click drag to start selecting, release to copy to tmux buffer
 # bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "clip.exe"
+# Enable true color support
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
