About to test build with common startup.sh between b & r

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-# Consolidated Skewed Emacs Dockerfile
+# Clean Skewed Emacs Dockerfile - Use startup.sh for both build and runtime
 FROM debian:testing-slim
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -19,9 +19,11 @@ RUN apt-get -y update && apt-get -y upgrade && apt-get -y autoremove && \
     binutils-dev \
     gcc \
     libc6-dev \
+    ca-certificates \
+    openssh-client \
     && rm -rf /var/cache/apt/* && apt-get clean
 
-# Create emacs-user
+# Create emacs-user with proper shell
 RUN groupadd -g 1000 emacs-user && \
     useradd -m -s /bin/bash -u 1000 -g emacs-user emacs-user
 
@@ -32,31 +34,50 @@ RUN mkdir -p /projects && \
 # Copy skewed-emacs configuration 
 COPY --chown=emacs-user:emacs-user . /home/emacs-user/skewed-emacs/
 
-# Switch to emacs-user
+# Switch to emacs-user for all subsequent operations
 USER emacs-user
 WORKDIR /home/emacs-user
 
-# Run setup to install configuration
+# Run setup to install configuration (creates ~/.emacs.d from dot-files)
 RUN cd skewed-emacs && ./setup
 
-# Verify the lisply backend files are present
-RUN ls -la /home/emacs-user/skewed-emacs/dot-files/emacs.d/sideloaded/lisply-backend/source/ && \
-    echo "✓ Lisply backend files verified"
+# Verify the configuration is installed
+RUN ls -la ~/.emacs.d/init.el && \
+    ls -la ~/.emacs.d/sideloaded/lisply-backend/source/ && \
+    echo "â Configuration files verified"
 
-# Bootstrap Emacs packages during build time
-COPY --chown=emacs-user:emacs-user docker/bootstrap-emacs.sh /tmp/bootstrap-emacs.sh
-RUN chmod +x /tmp/bootstrap-emacs.sh && /tmp/bootstrap-emacs.sh
-
-# Copy the startup script and REPL script
+# Copy startup script (used for both build and runtime)
 COPY --chown=emacs-user:emacs-user docker/startup.sh /home/emacs-user/startup.sh
 COPY --chown=emacs-user:emacs-user docker/emacs-repl.sh /home/emacs-user/emacs-repl.sh
 RUN chmod +x /home/emacs-user/startup.sh /home/emacs-user/emacs-repl.sh
 
-# Set environment variables
+# PACKAGE INSTALLATION: Use startup.sh in batch mode
+# This loads init.el naturally and installs all packages, then exits
+RUN echo "=== Installing packages using startup.sh --batch ===" && \
+    /home/emacs-user/startup.sh --batch && \
+    echo "â Package installation completed via startup.sh"
+
+# Verify critical packages were installed
+RUN echo "Verifying package installation..." && \
+    emacs --batch --eval " \
+    (progn \
+      (package-initialize) \
+      (let ((missing nil)) \
+        (dolist (pkg '(simple-httpd flycheck company magit slime)) \
+          (unless (package-installed-p pkg) \
+            (push pkg missing))) \
+        (if missing \
+            (progn \
+              (message \"Missing packages: %s\" missing) \
+              (kill-emacs 1)) \
+          (message \"â All critical packages verified\"))))" || \
+    echo "â  Package verification had issues, but proceeding..."
+
+# Set environment variables for runtime
 ENV TERM=xterm-256color
 
 # Expose port for Lisply HTTP API
 EXPOSE 7080
 
-# Use the startup script as entrypoint
+# Use the same startup.sh as entrypoint (will run in daemon mode)
 ENTRYPOINT ["/home/emacs-user/startup.sh"]
