trying new banner

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -41,6 +41,17 @@ RUN apt-get -y update && apt-get -y upgrade && apt-get -y autoremove && \
     /home/emacs-user/skewed-emacs/docker/copilot-language-server \
     /usr/local/bin/copilot-language-server
 
+RUN echo "deb-src http://deb.debian.org/debian testing main" >> /etc/apt/sources.list && \
+    echo "deb-src http://deb.debian.org/debian-security testing-security main" >> /etc/apt/sources.list && \
+    apt-get update && \
+    mkdir -p /usr/src/emacs && \
+    cd /usr/src/emacs && \
+    apt-get source emacs && \
+    chown -R emacs-user:emacs-user /usr/src/emacs && \
+    echo "Emacs source code available at /usr/src/emacs/" > /usr/src/emacs/README-SOURCE && \
+    echo "" >> /usr/src/emacs/README-SOURCE && \
+    rm -rf /var/cache/apt/* /var/lib/apt/lists/* && apt-get clean
+
 # Copy skewed-emacs configuration 
 COPY --chown=emacs-user:emacs-user . \
     /home/emacs-user/skewed-emacs/
