install enough fonts for reasonable Unicode set.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -28,6 +28,7 @@ RUN apt-get -y update && apt-get -y upgrade && apt-get -y autoremove && \
     make \
     pkg-config \
     dpkg-dev \
+    fonts-dejavu \
     && rm -rf /var/cache/apt/* /var/lib/apt/lists/* && apt-get clean \
     && curl -fsSL \
     https://download.docker.com/linux/static/stable/x86_64/docker-24.0.7.tgz \
@@ -40,9 +41,9 @@ RUN apt-get -y update && apt-get -y upgrade && apt-get -y autoremove && \
     && chown emacs-user:emacs-user /projects \
     && ln -s \
     /home/emacs-user/skewed-emacs/docker/copilot-language-server \
-    /usr/local/bin/copilot-language-server
-
-RUN echo "deb-src http://deb.debian.org/debian testing main" >> /etc/apt/sources.list && \
+    /usr/local/bin/copilot-language-server && \
+    fc-cache -fv && \ 
+    echo "deb-src http://deb.debian.org/debian testing main" >> /etc/apt/sources.list && \
     echo "deb-src http://deb.debian.org/debian-security testing-security main" >> /etc/apt/sources.list && \
     apt-get update && \
     mkdir -p /usr/src/emacs && \
