--- a/docker/build
+++ b/docker/build
@@ -49,19 +49,7 @@ fi
 
 echo "Building with branch tag: ${branch}"
 
-# Build with the naming convention expected by lisply-mcp
-export DOCKER_BUILDKIT=1
-
-# Build the full version for X11 support and emacs 30.1 native
-# compilation. Silex version to save around 0.5 GB image size.
-
-# Silex version, around 1.05 GB
-# docker build --progress=plain -t gornskew/skewed-emacs:${branch} -f Dockerfile.silex ..
-
-# Full version, around 1.52 GB
 docker build --progress=plain -t gornskew/skewed-emacs:${branch} -f Dockerfile ..
-
-# Also tag with 'dev' for local development compatibility
 docker tag gornskew/skewed-emacs:${branch} gornskew/skewed-emacs:latest
 
 echo ""
@@ -71,17 +59,11 @@ echo "Also tagged as: gornskew/skewed-emacs:latest"
 echo ""
 echo "To test the container:"
 echo "  ./run                                    # Uses default ports (host 7081 -> container 7080)"
-echo "  HTTP_HOST_PORT=7080 ./run                # Uses lisply-mcp compatible ports (host 7080 -> container 7080)"
 echo "  docker run -p 7081:7080 gornskew/skewed-emacs:${branch}   # Manual run with default ports"
 echo ""
 
-# Push to Docker Hub if requested
 if [ "$PUSH_TO_HUB" = true ]; then
-    echo "=== Pushing to Docker Hub ==="
-    echo "Pushing gornskew/skewed-emacs:${branch}..."
-    docker push gornskew/skewed-emacs:${branch}
-    echo "✓ Successfully pushed to Docker Hub"
-    echo ""
+    DOCKER_CONFIG=~/.docker-dockerhub-gornskew docker push gornskew/skewed-emacs:${branch}
 else
     echo "Skipped push to Docker Hub (--no-push specified)"
     echo "To push manually:"
@@ -89,6 +71,6 @@ else
 fi
 
 echo ""
-echo "To use with lisply-mcp, update your MCP config to:"
-echo "  \"imageBaseName\": \"gornskew/skewed-emacs\","
-echo "  \"imageBranch\": \"${branch}\""
+echo "Done with docker build job."
+echo ""
+
